--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-icons": "^3.0.0",
     "@types/styled-components": "^5.1.3",
+    "axios": "^0.20.0",
     "classnames": "^2.2.6",
     "react": "^16.13.1",
     "react-dev-tools": "0.0.1",
@@ -20,7 +21,8 @@
     "react-icons": "^3.11.0",
     "react-scripts": "3.4.3",
     "styled-components": "^5.2.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.7.5",
+    "typescript-plugin-css-modules": "^2.7.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "typings-for-css-modules-loader": "^1.7.0"
   }
 }
