--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,7 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "plugins": [
-      {
-        "name": "typescript-plugin-css-modules",
-        "options": {
-          "customMatcher": "\\.m\\.css$",
-          "camelCase": "dashes"
-        }
-      }
-    ],
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "target": "es6",
+    "lib": ["ES6", "dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
